# spl-token-faucet

./: .gitignore  Anchor.toml  Brewfile  CNAME  README.md  package-lock.json  spl_token_faucet-keypair.json
.github/workflows/: main.yml
app/: CNAME  config-overrides.js  package-lock.json  package.json
app/public/: index.html  manifest.json
app/src/: App.js  App.test.js  index.js  index.scss
app/src/components/Airdrop/: index.js  style.scss
app/src/components/Footer/: index.js  style.scss
app/src/components/Navbar/: index.js  style.scss
app/src/components/Navbar/CheckBalance/: index.js
app/src/components/Utils/: notify.js  utils.js
app/src/config/: config.js  spl_token_faucet.json
programs/spl-token-faucet/: Cargo.toml
programs/spl-token-faucet/src/: lib.rs
setup/: usdc_airdrop.js
tests/: spl-token-faucet.ts
